# jgrapht-capi

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  pom.xml
.github/workflows/: push.yml
etc/cmake/: FindMaven.cmake
jgrapht/: jgrapht.c  jgrapht.h
jgrapht-capi/: README.md  pom.xml
jgrapht-capi/src/main/java/org/jgrapht/capi/: CapiUtils.java  Constants.java  Errors.java  JGraphTContext.java  JGraphTDirectives.java  Status.java  StringUtils.java  Types.java
jgrapht-capi/src/main/java/org/jgrapht/capi/attributes/: AttributesApi.java  AttributesStore.java  GraphAnyAnyStore.java  GraphAnyStore.java  GraphAttributesStore.java  GraphStringAttributeStore.java  RegisteredAttribute.java
jgrapht-capi/src/main/java/org/jgrapht/capi/custom/alg/color/: ChordalGraphColoring.java  ChordalityInspector.java  MaximumCardinalityIterator.java
jgrapht-capi/src/main/java/org/jgrapht/capi/custom/drawing/: BarycenterGreedyTwoLayeredBipartiteLayout2D.java  BaseLayoutAlgorithm2D.java  FRLayoutAlgorithm2D.java  FRQuadTree.java  IndexedFRLayoutAlgorithm2D.java  MedianGreedyTwoLayeredBipartiteLayout2D.java  TwoLayeredBipartiteLayout2D.java
jgrapht-capi/src/main/java/org/jgrapht/capi/custom/io/: CustomDIMACSImporter.java
jgrapht-capi/src/main/java/org/jgrapht/capi/custom/linkprediction/: SorensenIndexLinkPrediction.java
jgrapht-capi/src/main/java/org/jgrapht/capi/custom/partition/: BipartitePartitioning.java
jgrapht-capi/src/main/java/org/jgrapht/capi/custom/traverse/: DegeneracyOrderingIterator.java  LexBreadthFirstIterator.java
jgrapht-capi/src/main/java/org/jgrapht/capi/enums/: ExporterDIMACSFormat.java  Status.java
jgrapht-capi/src/main/java/org/jgrapht/capi/error/: BooleanExceptionHandler.java  DoubleExceptionHandler.java  Error.java  Errors.java  LongExceptionHandler.java  ObjectHandleExceptionHandler.java  StatusReturnExceptionHandler.java  VoidExceptionHandler.java
jgrapht-capi/src/main/java/org/jgrapht/capi/graph/: CapiAsMaskSubgraph.java  CapiAsSubgraph.java  CapiAsUndirectedGraph.java  CapiAsUndirectedGraphWithAttributes.java  CapiAsUnmodifiableGraph.java  CapiAsUnmodifiableGraphWithAttributes.java  CapiAsUnweightedGraph.java  CapiAsUnweightedGraphWithAttributes.java  CapiAsWeightedGraph.java  CapiDirectedAcyclicGraphWithAttributes.java  CapiEdgeReversedGraph.java  CapiEdgeReversedGraphWithAttributes.java  CapiGraph.java  CapiGraphAsGraphUnion.java  CapiGraphAsListenableGraph.java  CapiGraphAsMaskSubgraph.java  CapiGraphAsSubgraph.java  CapiGraphAsUndirectedGraph.java  CapiGraphAsUnmodifiableGraph.java  CapiGraphAsUnweightedGraph.java  CapiGraphAsWeightedGraph.java  CapiGraphDelegator.java  CapiGraphEdgeReversedGraph.java  CapiGraphWithAnyStore.java  CapiGraphWithAttributes.java  CapiGraphWrapper.java  CapiListenableGraph.java  DefaultCapiGraph.java  DefaultHashAndEqualsResolver.java  DirectedAcyclicGraphWithAttributes.java  ExternalRef.java  ExternalRefCapiGraph.java  ExternalRefSupplier.java  GraphWithAnyStore.java  GraphWithAttributes.java  HashAndEqualsResolver.java  MaskEdgeSet.java  MaskVertexSet.java  PointerGraph.java  SafeEdgeSupplier.java  (+3 more)
jgrapht-capi/src/main/java/org/jgrapht/capi/impl/: CliqueApi.java  ClusteringAPI.java  ClusteringApi.java  ColoringAPI.java  ColoringApi.java  ConnectivityApi.java  CutApi.java  CycleApi.java  DrawingApi.java  ErrorAPI.java  ErrorApi.java  ExecutorApi.java  ExporterApi.java  FlowApi.java  GenerateApi.java  GraphAPI.java  GraphApi.java  GraphDagApi.java  GraphMetricsApi.java  GraphPathApi.java  GraphTestsApi.java  GraphWithAttributesApi.java  HandlesApi.java  ImporterApi.java  ImporterEdgeListApi.java  IndependentSetApi.java  IsomorphismApi.java  IteratorAPI.java  IteratorApi.java  LinkPredictionApi.java  ListApi.java  ListenableGraphApi.java  MapAPI.java  MapApi.java  MatchingApi.java  MemoryAPI.java  MemoryApi.java  MstAPI.java  MstApi.java  PartitionApi.java  (+11 more)
jgrapht-capi/src/main/java/org/jgrapht/capi/io/: CustomDIMACSImporter.java
jgrapht-capi/src/main/native/: jgrapht_capi_types.h
jgrapht-nlib/: CMakeLists.txt  README.md  pom.xml
jgrapht-nlib/src/main/java/org/jgrapht/nlib/: Constants.java  Errors.java  Status.java
jgrapht-nlib/src/main/java/org/jgrapht/nlib/api/: ErrorAPI.java  GenericAPI.java  GraphAPI.java  IteratorAPI.java  MapAPI.java  MemoryAPI.java  MstAPI.java  VertexCoverAPI.java
src/main/java/org/jgrapht/nlib/: Constants.java  Error.java  GraphLookupException.java  Graphs.java  Shared.java  Status.java
src/main/java/org/jgrapht/nlib/api/: ErrorAPI.java  GraphAPI.java  MstAPI.java
test/: test_addvertex.c  test_chinese_postman.c  test_clique.c  test_clustering.c  test_coloring.c  test_connectivity.c  test_contraction_hierarchy.c  test_csv.c  test_csv_edgelist.c  test_dag.c  test_dimacs.c  test_dimacs_edgelist.c  test_directed_graph.c  test_dot.c  test_dot_edgelist.c  test_draw_bipartite.c  test_draw_circular.c  test_draw_fr.c  test_draw_random.c  test_edges.c  test_edgesupplier.c  test_equivalentflow.c  test_error.c  test_eulerian.c  test_exporters.c  test_flow.c  test_fundamental_basis_bfs.c  test_fundamental_basis_paton.c  test_fundamental_basis_stack.c  test_generate.c  test_gexf.c  test_gexf_edgelist.c  test_gml.c  test_gml_edgelist.c  test_gml_importer.c  test_gomoryhu.c  test_graph6.c  test_graph6_edgelist.c  test_graph_union.c  test_graphmetrics.c  (+49 more)
